security-grp.tf
resource "aws_security_group" "allow_http" {
  name        = "allow_http"
  description = "Permitindo tráfego de entrada para http "
  vpc_id      = aws_vpc.leads-vpc.id

  ingress {
    description = "TLS para VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "TLS para VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_tls"
  }
}

resource "aws_security_group" "allow_rds" {
  name        = "allow_RDS"
  description = "Permitindo acesso do rds para o Worpress"
  vpc_id      = aws_vpc.leads-vpc.id
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "allow_rds"
  }
}
